--- a/edu.cuny.hunter.optionalrefactoring.core/src/edu/cuny/hunter/optionalrefactoring/core/messages/messages.properties
+++ b/edu.cuny.hunter.optionalrefactoring.core/src/edu/cuny/hunter/optionalrefactoring/core/messages/messages.properties
@@ -10,3 +10,12 @@ ConvertNullToOptionalTypePage_ConstantsToExtract=Constants to extract an enum fr
 ConvertNullToOptionalTypePage_CountMembersSelected={0} member(s) selected
 ConvertNullToOptionalTypePage_Description=Select the fields to convert to the new enum.
 ConvertNullToOptionalTypePage_EnumName=Enum name:
+Util_MemberNotFound=Cannot get IMember from null element.
+Worklist_IllegalWorklistElement=Illegal worklist element: 
+ASTNodeProcessor_SourceNotPresent=Source not present.
+ASTNodeProcessor_IllegalArrayUpcast=Illegal array upcast.
+ASTNodeProcessor_IllegalExpression=Illegal expression.
+ASTNodeProcessor_IllegalNodeContext=Illegal node context.
+ASTNodeProcessor_NonEnumerizableTypeEncountered=Non-enumerizable type encountered.
+ASTNodeProcessor_IllegalAssignmentExpression=Illegal assignment expression.
+ASTNodeProcessor_IllegalInfixExpression=Illegal infix expression.
