PreconditionFailure handling and RefactoringStatus

--- a/edu.cuny.hunter.optionalrefactoring.core/src/edu/cuny/hunter/optionalrefactoring/core/messages/messages.properties
+++ b/edu.cuny.hunter.optionalrefactoring.core/src/edu/cuny/hunter/optionalrefactoring/core/messages/messages.properties
@@ -12,10 +12,11 @@ ConvertNullToOptionalTypePage_Description=Select the fields to convert to the ne
 ConvertNullToOptionalTypePage_EnumName=Enum name:
 Util_MemberNotFound=Cannot get IMember from null element.
 Worklist_IllegalWorklistElement=Illegal worklist element: 
-ASTNodeProcessor_SourceNotPresent=Source not present.
-ASTNodeProcessor_IllegalArrayUpcast=Illegal array upcast.
-ASTNodeProcessor_IllegalExpression=Illegal expression.
-ASTNodeProcessor_IllegalNodeContext=Illegal node context.
-ASTNodeProcessor_NonEnumerizableTypeEncountered=Non-enumerizable type encountered.
-ASTNodeProcessor_IllegalAssignmentExpression=Illegal assignment expression.
-ASTNodeProcessor_IllegalInfixExpression=Illegal infix expression.
+Harvester_SourceNotPresent=Source not present.
+Harvester_ASTNodeError=Expected AST Node not encountered while trying to process the following: 
+Harvester_JavaModelError=Expected JavaElement not encountered while trying to process the following: 
+Harvester_MissingJavaElement=Expected Java Model element not preset while trying to process the following: 
+Harvester_MissingBinding=Expected Binding could not be resolved while trying to process the following: 
+Harvester_CastExpression=Null-type-dependent Cast Expression encountered.
+NullLiteralFailed=A null literal failed to pass the preconditions.
+PreconditionFailureFailure=The plugin was unsuccessful in handling a Precondition Failure for the following: 
