--- a/edu.cuny.hunter.optionalrefactoring.core/src/edu/cuny/hunter/optionalrefactoring/core/messages/messages.properties
+++ b/edu.cuny.hunter.optionalrefactoring.core/src/edu/cuny/hunter/optionalrefactoring/core/messages/messages.properties
@@ -18,5 +18,6 @@ Harvester_JavaModelError=Expected JavaElement not encountered while trying to pr
 Harvester_MissingJavaElement=Expected Java Model element not preset while trying to process the following: 
 Harvester_MissingBinding=Expected Binding could not be resolved while trying to process the following: 
 Harvester_CastExpression=Null-type-dependent Cast Expression encountered.
-NullLiteralFailed=A null literal failed to pass the preconditions.
-PreconditionFailureFailure=The plugin was unsuccessful in handling a Precondition Failure for the following: 
+Harvester_NullLiteralFailed=A null literal failed to pass the preconditions.
+Harvester_PreconditionFailureFailure=The plugin was unsuccessful in handling a Precondition Failure for the following: 
+Harvester_SetFailure=Some type-dependent elements of this seed failed to pass the preconditions.
