tests pass for RefactoringSettings

--- a/edu.cuny.hunter.optionalrefactoring.core/src/edu/cuny/hunter/optionalrefactoring/core/messages/messages.properties
+++ b/edu.cuny.hunter.optionalrefactoring.core/src/edu/cuny/hunter/optionalrefactoring/core/messages/messages.properties
@@ -21,3 +21,4 @@ Harvester_CastExpression=Null-type-dependent Cast Expression encountered.
 Harvester_NullLiteralFailed=A null literal failed to pass the preconditions.
 Harvester_PreconditionFailureFailure=The plugin was unsuccessful in handling a Precondition Failure for the following: 
 Harvester_SetFailure=Some type-dependent elements of this seed failed to pass the preconditions.
+Excluded_by_Settings=This type of entity is excluded by the Refactoring Settings chosen.
