--- a/edu.cuny.hunter.optionalrefactoring.core/src/edu/cuny/hunter/optionalrefactoring/core/messages/messages.properties
+++ b/edu.cuny.hunter.optionalrefactoring.core/src/edu/cuny/hunter/optionalrefactoring/core/messages/messages.properties
@@ -6,10 +6,7 @@ CheckingPreconditions=Checking preconditions...
 CompilingSource=Compiling source ...
 CreatingChange=Creating change...
 CUContainsCompileErrors=Member ''{0}'' has a compilation unit ''{1}'' that contains compilation errors.
-ConvertNullToOptionalTypePage_ConstantsToExtract=Constants to extract an enum from:
-ConvertNullToOptionalTypePage_CountMembersSelected={0} member(s) selected
-ConvertNullToOptionalTypePage_Description=Select the fields to convert to the new enum.
-ConvertNullToOptionalTypePage_EnumName=Enum name:
+ConvertNullToOptionalTypePage_Description=Select the fields to convert to Optional.
 Util_MemberNotFound=Cannot get IMember from null element.
 Worklist_IllegalWorklistElement=Illegal worklist element: 
 Harvester_SourceNotPresent=Source not present.
