--- a/edu.cuny.hunter.optionalrefactoring.core/src/edu/cuny/hunter/optionalrefactoring/core/messages/messages.properties
+++ b/edu.cuny.hunter.optionalrefactoring.core/src/edu/cuny/hunter/optionalrefactoring/core/messages/messages.properties
@@ -18,4 +18,11 @@ Harvester_CastExpression=Null-type-dependent Cast Expression encountered.
 Harvester_NullLiteralFailed=A null literal failed to pass the preconditions.
 Harvester_PreconditionFailureFailure=The plugin was unsuccessful in handling a Precondition Failure for the following: 
 Harvester_SetFailure=Some type-dependent elements of this seed failed to pass the preconditions.
-Excluded_by_Settings=This type of entity is excluded by the Refactoring Settings chosen.
+Entity_Excluded=Entity was excluded by the Refactoring Settings chosen.
+Cast_Expression=Entity was an operand of a cast expression.
+InstanceOf_Expression=Entity was an operand of an instanceof expression.
+Entity_NoFailures=The entity satisfied all preconditions.
+ObjectType=This entity is a super type of Optional.
+Comparison_Op=Entity was an operand of an infix comparison expression.
+Enhanced_For=Encountered an Enhanced For Statement that may need bridging.
+Bridging_Excluded=The bridging of this type of entity has been excluded by settings.
