Fix:  Seeder should report errors #122

--- a/edu.cuny.hunter.optionalrefactoring.core/src/edu/cuny/hunter/optionalrefactoring/core/messages/messages.properties
+++ b/edu.cuny.hunter.optionalrefactoring.core/src/edu/cuny/hunter/optionalrefactoring/core/messages/messages.properties
@@ -1,7 +1,7 @@
 Name=Convert Null to Optional
 CategoryName=Optional Changes
 CategoryDescription=Converts nulls to optionals.
-NoNullsHavePassedThePreconditions=No nulls to refactor.
+NoNullsHaveBeenFound=No nulls to refactor.
 CheckingPreconditions=Checking preconditions...
 CompilingSource=Compiling source ...
 CreatingChange=Creating change...
