--- a/edu.cuny.hunter.optionalrefactoring.core/src/edu/cuny/hunter/optionalrefactoring/core/messages/messages.properties
+++ b/edu.cuny.hunter.optionalrefactoring.core/src/edu/cuny/hunter/optionalrefactoring/core/messages/messages.properties
@@ -26,3 +26,4 @@ ObjectType=This entity is a super type of Optional.
 Comparison_Op=Entity was an operand of an infix comparison expression.
 Enhanced_For=Encountered an Enhanced For Statement that may need bridging.
 Bridging_Excluded=The bridging of this type of entity has been excluded by settings.
+Transformer_FailedToWriteDocument=An edit got added to a parent edit but the child edit somehow conflicts with the parent or one of it siblings, or, an attempt to access a non-existing position.
