added an additional precondition check ref #64

--- a/edu.cuny.hunter.optionalrefactoring.core/src/edu/cuny/hunter/optionalrefactoring/core/messages/messages.properties
+++ b/edu.cuny.hunter.optionalrefactoring.core/src/edu/cuny/hunter/optionalrefactoring/core/messages/messages.properties
@@ -23,7 +23,9 @@ Cast_Expression=Entity was an operand of a cast expression.
 InstanceOf_Expression=Entity was an operand of an instanceof expression.
 Entity_NoFailures=The entity satisfied all preconditions.
 ObjectType=This entity is a super type of Optional.
-Comparison_Op=Entity was an operand of an infix comparison expression.
+Reference_Equality_Op=Entity was an operand of an infix comparison expression.
 Enhanced_For=Encountered an Enhanced For Statement that may need bridging.
 Bridging_Excluded=The bridging of this type of entity has been excluded by settings.
 Transformer_FailedToWriteDocument=An edit got added to a parent edit but the child edit somehow conflicts with the parent or one of it siblings, or, an attempt to access a non-existing position.
+Conditional_Op=This entity was an operand of a Conditional Expression.
+Member_Access_Op=This entity was used in a FieldAccess or as the receiver of a MethodInvocation.
